--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-/* Feel free to change whatever sry if anything is ugly~ */
-
 body{
 	font-family: Arial;
 	font-size: 11px;
@@ -58,8 +56,14 @@ a {
 }
 
 #center {
-	background-color: green;
+	display: inline-block;
+	margin-top: 0px;
+	position: relative;
 	width: 764px;
+}
+
+#center, #head, #left, #nav, #right, #titleleft, #titleright {
+	background-color: #292929;
 }
 
 #center, #left {
@@ -69,37 +73,101 @@ a {
 }
 
 #footer {
+	color: #292929;
 	clear: both;
 	text-align: center;
 }
 
 #head {
-	background-color: #292929;
 	height: 135px;
 	margin-bottom: 5px;
 }
 
 #footer, #head, #main, #nav {
-	background-color: #292929;
 	margin-left: auto;
 	margin-right: auto;
 	width: 1214px;
 }
 
-#left {
-	background-color: #292929;
+#left, #right {
+	display: inline-block;
+	position: relative;
 	width: 219px;
+	z-index: 0;
 }
 
 #nav {
-	background-color: #292929;
 	margin-bottom: 5px;
 	text-align: center;
 }
 
 #right {
-	background-color: #292929;
-	display: inline-block;
+	float: left;
 	margin-bottom: 5px;
-	width: 219px;
+}
+
+#stuff {
+	position: absolute;
+	width: 100%;
+	top: 0px;
+}
+
+#titleleft, #titleright {
+	display: none;
+}
+
+/* CSS that changes when the screen is smaller than 1230px */
+@media screen and (max-width: 1230px) {
+	#center {
+		width: 655px;
+	}
+
+	#footer, #head, #main, #nav {
+		width: 1005px;
+	}
+
+	#left, #right {
+		width: 170px;
+	}
+}
+
+/* CSS that changes when the screen is smaller than 1024px */
+@media screen and (max-width: 1024px) {
+	h1 {
+		font-size: 24px;
+		padding: 5px;
+	}
+
+	#center, #footer, #head, #main, #nav {
+		width: 100%;
+	}
+
+	#left, #right, #titleleft, #titleright {
+		width: 49%;
+	}
+
+	#leftbar, #rightbar {
+		display: none;
+	}
+
+	#left, #right, #titleright {
+		position: absolute;
+	}
+
+	#right {
+		margin-top: 35px;
+	}
+
+	#right, #titleright {
+		right: 0px;
+	}
+
+	#titleleft, #titleright {
+		display: inline-block;
+		height: 30px;
+		font-size: 18px;
+		line-height: 30px;
+		margin-bottom: 5px;
+		text-align: center;
+	}
 }
