--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,10 @@ a {
 	text-decoration: underline;
 }
 
+.threadList {
+	text-align:left;
+}
+
 #center {
 	display: inline-block;
 	margin-top: 0px;
@@ -127,7 +131,8 @@ a {
 
 #centerTitle {
 	color: white;
-	margin: 0px;
+	margin: auto;
+	width:50%;
 	text-align: center;
 }
 
@@ -148,7 +153,7 @@ a {
 
 /* CSS that changes when the screen is smaller than 1024px */
 @media screen and (max-width: 1024px) {
-	h1 {
+	h1{
 		font-size: 24px;
 		padding: 5px;
 	}
