--- a/template/news.html
+++ b/template/news.html
@@ -1,12 +1,10 @@
 <div id="center">
 	
-	<div class="container">
-		<h1 id="centerTitle">News</h1>
+	<div class="container" id="centerTitle">
+		<h4>News</h4>
 	</div>
 	<div class ="container">
-		<div class ="row">
-			<div class ="col-md-4" id="topic">
-				<h5>Topics Created</h5>		
+		<h5>Threads Created</h5>		
 	</div>
 	<div class ="container" id="threadList">
 		<ul>
