--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,12 @@ body{
 	font-family: Arial;
 	font-size: 11px;
 	margin: 0px;
-	background-image: url('../img/letmelivedeepwhileilive.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
 	color: white;
+	background: url('../img/letmelivedeepwhileilive.jpg') no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 
 form {
