--- a/templates/forum/news.html
+++ b/templates/forum/news.html
@@ -1,6 +1,6 @@
 <div id="center">
 	
-		<h1>News</h1>
+		<h1>{{thread.}}</h1>
 	<div class="container" id="centerTitle">
 	</div>
 	<div class ="container">
