--- a/css/main.css
+++ b/css/main.css
@@ -30,8 +30,23 @@ strong {
 	font-size: 12px;
 }
 
+#replyComment {
+	width: 100%;
+	margin-bottom: 10px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .post {
-	width: 500px;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 10px;
+}
+
+#replyButton {
+	margin: 0;
+	margin-bottom: 10px;
 }
 
 .timeStamp {
