--- a/templates/forum/threads.html
+++ b/templates/forum/threads.html
@@ -1,12 +1,21 @@
 <div class="container" id="threadMain">
-	<div id="threadCenter">
-		<div class="post" ng-repeat="post in posts">
-			<div class="threadUser">
-				<span>{{ post.author.name }}</span> <span class="timeStamp">{{ post.createdAt }}</span>
-			</div>
-			<div class="threadContent">
-				<p>{{ post.raw_message }}</p>
-			</div>
+	<div class="post" ng-repeat="post in posts">
+		<div class="threadUser">
+			<span>{{ post.author.name }}</span> <span class="timeStamp">{{ post.createdAt | date : 'short' }}</span>
 		</div>
+		<div class="threadContent">
+			<p>{{ post.raw_message }}</p>
+		</div>
+	</div>
+</div>
+<div class="form-group">
+    <label for="comment" class="col-sm-2 control-label">Comment</label>
+	<div id="replyComment" class="col-sm-10">
+		<textarea class="form-control" id="replyComment" placeholder="Reply with a Comment" rows="3"></textarea>
+	</div>
+</div>
+<div class="form-group">
+	<div id="replyButton" class="col-sm-offset-2 col-sm-10">
+		<button type="submit" class="btn btn-default">Reply</button>
 	</div>
 </div>
