--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ form {
 h1 {
 	background-color: black;
 	color: white;
+	font-size: 26px;
 	margin: 0px;
 	text-align: center;
 }
@@ -31,6 +32,8 @@ strong {
 }
 
 .post {
+	margin-left: auto;
+	margin-right: auto;
 	width: 500px;
 }
 
@@ -45,6 +48,7 @@ strong {
 }
 
 #threadMain {
+	margin-bottom: 10px;
 	margin-top: 10px;
 	width: 635px;
 }
