--- a/templates/forum/home.html
+++ b/templates/forum/home.html
@@ -1,6 +1,5 @@
-<div id="buttonNMessage">
-	<h1 id="headerMessage" onload="getElementById('homepageStuff').style.display = 'initial'">Come Join the Discussion!</h1>
-	<a ui-sref="newPost" onclick="getElementById('homepageStuff').style.display = 'none'"><button type="submit" class="btn btn-default">Make New Post</button></a>
+<div>
+	<a onload="getElementById('homepageStuff').style.display = 'initial'" ui-sref="newPost" onclick="getElementById('homepageStuff').style.display = 'none'"><button type="submit" class="btn btn-default">Make New Post</button></a>
 </div>
 
 <div id="homepageStuff">
