--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,7 @@ a {
 	margin-right: 6px;
 }
 
-#footer {
+#footer, #irc{
 	clear: both;
 	text-align: center;
 }
@@ -131,7 +131,7 @@ a {
 	margin-bottom: 5px;
 }
 
-#footer, #head, #main, #nav {
+#footer, #head, #main, #nav, #irc{
 	margin-left: auto;
 	margin-right: auto;
 	width: 1214px;
@@ -143,7 +143,7 @@ a {
 	z-index: 0;
 }
 
-#login {
+#login, #logout{
 	cursor: pointer;
 	padding-left: 15px;
 }
@@ -194,7 +194,7 @@ a {
 		margin-right: 5px;
 	}
 
-	#footer, #head, #main, #nav {
+	#footer, #head, #main, #nav, #irc {
 		width: 1005px;
 	}
 
@@ -210,7 +210,7 @@ a {
 		padding: 5px;
 	}
 
-	#center, #footer, #head, #main, #nav {
+	#center, #footer, #head, #main, #nav, #irc {
 		width: 100%;
 	}
 
