--- a/templates/forum/irc.html
+++ b/templates/forum/irc.html
@@ -1,3 +1,5 @@
 
 <!-- might need to put into a div later -->
-<iframe src="https://kiwiirc.com/client/irc.kiwiirc.com/#gamers" style="border:0; width:100%; height:450px;"></iframe>
+<div>
+<iframe src="https://kiwiirc.com/client/irc.kiwiirc.com/?nick=enter user|?#gamers" style="border:0; width:100%; height:450px;"></iframe>	
+</div>
