--- a/templates/forum/newPost.html
+++ b/templates/forum/newPost.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal">
+<form class="form-horizontal" ng-show='!showLogin'>
   <div class="form-group">
     <label for="topicTitle" class="col-sm-2 control-label">Topic</label>
     <div class="col-sm-10">
@@ -13,7 +13,9 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Sign in</button>
+      <button type="submit" class="btn btn-default">Post</button>
     </div>
   </div>
+
+<iframe src="https://kiwiirc.com/client/irc.kiwiirc.com/?nick=enter user|?#gamers" style="border:0; width:50%; height:450px;"></iframe> 
 </form>
