--- a/templates/forum/threads.html
+++ b/templates/forum/threads.html
@@ -15,7 +15,7 @@
 	</div>
 </div>
 <div class="form-group">
-	<div id="replyButton" class="col-sm-offset-2 col-sm-10">
-		<button type="submit" class="btn btn-default">Reply</button>
+	<div class="col-sm-offset-2 col-sm-10">
+		<button id="replyButton" type="submit" class="btn btn-default">Reply</button>
 	</div>
 </div>
