--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ strong {
 #threadMain {
 	margin-bottom: 10px;
 	margin-top: 10px;
-	width: 635px;
+	width: 99%;
 }
 
 .threadUser {
@@ -257,7 +257,7 @@ a, a:visited {
 	#right, #titleright {
 		right: 0px;
 	}
-
+	
 	#titleleft, #titleright {
 		display: inline-block;
 		height: 30px;
