--- a/templates/forum/threads.html
+++ b/templates/forum/threads.html
@@ -16,6 +16,6 @@
 </div>
 <div class="form-group">
 	<div class="col-sm-offset-2 col-sm-10">
-		<button id="replyButton" type="submit" class="btn btn-default">Reply</button>
+		<button id="replyButton" type="submit" ng-click="createPost()" class="btn btn-default">Reply</button>
 	</div>
 </div>
