--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,10 @@ h1 {
 	text-align: center;
 }
 
+h5 {
+	
+}
+
 p {
 	padding-left: 5px;
 	padding-right: 5px;
@@ -115,6 +119,10 @@ a, a:visited {
 	background-color: black;
 	color: white;
 	text-decoration: none;
+}
+
+#gamersDesc {
+	padding: 7px;
 }
 
 .sidebar {
@@ -228,6 +236,10 @@ a, a:visited {
 
 	#left, #right {
 		width: 170px;
+	}
+
+	h5 {
+		
 	}
 }
 
