--- a/templates/forum/threads.html
+++ b/templates/forum/threads.html
@@ -11,11 +11,11 @@
 <div class="form-group">
     <label for="comment" class="col-sm-2 control-label">Comment {{ userName }}</label>
 	<div id="replyComment" class="col-sm-10">
-		<textarea class="form-control" id="replyComment" placeholder="Reply with a Comment" rows="3"></textarea>
+		<textarea class="form-control" id="replyText" placeholder="Reply with a Comment" rows="3"></textarea>
 	</div>
 </div>
 <div class="form-group">
 	<div class="col-sm-offset-2 col-sm-10">
-		<button id="replyButton" type="submit" ng-click="createPost()" class="btn btn-default">Reply</button>
+		<button id="replyButton" ng-click="createPost()" type="submit" class="btn btn-default">Reply</button>
 	</div>
 </div>
