--- a/templates/forum/home.html
+++ b/templates/forum/home.html
@@ -1,26 +1,36 @@
-<div>
-	<p id="gamersDesc">The GAMER Group explores new ideas and approaches for organizing and providing access to video games and interactive media, particularly from a user-centered perspective. We research various topics related to data modeling, metadata creation, and construction of controlled vocabularies for games and other related media such as music, artwork, videos, and more. The group is also responsible for developing and maintaining the UW/SIMM Video Game Metadata Schema in order to advance the cataloging practice of these popular cultural artifacts in cultural heritage organizations and support the use of games in education and science.</br></br>The GAMER Group is led by Professor Jin Ha Lee at the Information School, University of Washington.</p>
-<div>
-</div>
-
 <div id="homepageStuff">
 	<div class="container" id="centerTitle">
 		<h4>Featured Topic</h4>
 	</div>
-	<div>
-		<div>
-			<div id="topic">
-				<h5>Threads Created</h5>		
-			</div>
-			<div class ="container" id="threadList">
-				<!-- <ul>
-					<li ng-repeat='thread in threads'>{{thread.title + ' , created at ' + thread.createdAt}}</li>
-				</ul> -->
-				<ul ng-repeat="thread2 in threads2">
-					<li><a href="/#/thread/{{ thread2.id }}" class="sidebar">{{ thread2.title }}</a></li>
-				</ul>
-			</div>
+	<div id="listShowArea">
+		<table>
+			<tr id="tableHead">
+				<td>Threads</td>
+				<td>Original Creator</td>
+				<td>Date Created</td>
+			</tr>
+			<tr ng-repeat="thread2 in threads2" class="featuredThreads">
+				<td><a href="/#/thread/{{ thread2.id }}">{{ thread2.title }}</a></td>
+				<td>{{ thread2.author }}</td>
+				<td>{{ thread2.createdAt | date : 'short' }}</td>
+			</tr>
+
+		</table>
+
+
+
+
+		<!-- <div id="topic">
+			<h5>Threads Created</h5>		
 		</div>
+		<div id="threadList">
+			<ul>
+				<li ng-repeat='thread in threads'>{{thread.title + ' , created at ' + thread.createdAt}}</li>
+			</ul>
+			<ul class="featuredThreads" ng-repeat="thread2 in threads2">
+				<li><a href="/#/thread/{{ thread2.id }}">{{ thread2.title }}</a> <p>{{thread2.createdAt}}</li>
+			</ul>
+		</div> -->
 	</div>
 </div>
 
