--- a/templates/forum/threads.html
+++ b/templates/forum/threads.html
@@ -1,4 +1,15 @@
 <div class="container" id="threadMain">
+	<div class="post">
+		<div class="threadTitle">
+			<h3>title placeholder</h3>
+		</div>
+		<div class="post">
+			<div class="threadUser"></div>
+		</div>
+		<div class="threadContent">
+			<p>placeholder</p>
+		</div>
+	</div>
 	<div class="post" ng-repeat="post in posts">
 		<div class="threadUser">
 			<span>{{ post.author.name }}</span> <span class="timeStamp">{{ post.createdAt | date : 'short' }}</span>
