--- a/templates/forum/featuredTopic.html
+++ b/templates/forum/featuredTopic.html
@@ -1,40 +1,22 @@
 <div id="homepageStuff">
 	<div class="container" id="centerTitle">
 		<h4>Welcome to GAMERS!</h4>
-		<h4>Below is our Featured Topics</h4>
+		<h4>Below is our Featured Forum</h4>
 	</div>
 	<div id="listShowArea">
 		<table>
 			<tr id="tableHead">
 				<td>Threads</td>
 				<td>Original Creator</td>
+				<td>Replies</td>
 				<td>Date Created</td>
 			</tr>
 			<tr ng-repeat="thread2 in threads2" class="featuredThreads">
 				<td><a href="/#/thread/{{ thread2.id }}">{{ thread2.title }}</a></td>
 				<td>{{ thread2.author }}</td>
+				<td>{{ thread2.posts }}</td>
 				<td>{{ thread2.createdAt | date : 'short' }}</td>
 			</tr>
-
 		</table>
-
-
-
-
-		<!-- <div id="topic">
-			<h5>Threads Created</h5>		
-		</div>
-		<div id="threadList">
-			<ul>
-				<li ng-repeat='thread in threads'>{{thread.title + ' , created at ' + thread.createdAt}}</li>
-			</ul>
-			<ul class="featuredThreads" ng-repeat="thread2 in threads2">
-				<li><a href="/#/thread/{{ thread2.id }}">{{ thread2.title }}</a> <p>{{thread2.createdAt}}</li>
-			</ul>
-		</div> -->
 	</div>
 </div>
-
-<!-- <div>
-	<a onload="getElementById('homepageStuff').style.display = 'initial'" ui-sref="newPost" onclick="getElementById('homepageStuff').style.display = 'none'"><button type="submit" class="btn btn-default">Make New Post</button></a>
-</div> -->
