--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,10 @@ table {
 	margin-bottom: 10px;
 }
 
+.emailStyle {
+	text-decoration: underline;
+}
+
 td {
 	padding-left: 10px;
 	padding-top: 10px;
