--- a/templates/forum/threads.html
+++ b/templates/forum/threads.html
@@ -1,4 +1,4 @@
-<div class="container" id="threadMain">
+<div class="container" ng-init="getPosts()" id="threadMain">
 	<div class="post" ng-repeat="post in posts">
 		<div class="threadUser">
 			<span>{{ post.author.name }}</span> <span class="timeStamp">{{ post.createdAt | date : 'short' }}</span>
@@ -9,7 +9,7 @@
 	</div>
 </div>
 <div class="form-group">
-    <label for="comment" class="col-sm-3 control-label">Comment {{ userName }}</label>
+    <label for="comment" class="control-label">Comment {{ userName }}</label>
 	<div id="replyComment" class="col-sm-10">
 		<textarea class="form-control" id="replyText" placeholder="Reply with a Comment" rows="3"></textarea>
 	</div>
