--- a/templates/newPost.html
+++ b/templates/newPost.html
@@ -1,13 +1,13 @@
 <form class="form-horizontal">
   <div class="form-group">
     <label for="topicTitle" class="col-sm-2 control-label">Topic</label>
-    <div class="col-sm-10">
+    <div class="newPostArea">
       <input type="topic" class="form-control" id="topicTitle" placeholder="Topic">
     </div>
   </div>
   <div class="form-group">
     <label for="message" class="col-sm-2 control-label">Messages</label>
-    <div class="col-sm-10">
+    <div class="newPostArea">
     	<textarea class="form-control" id="messageInput" placeholder="Message" rows="3"></textarea>
     </div>
   </div>
