--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,6 @@ body{
 	font-family: Arial;
 	font-size: 11px;
 	margin: 0px;
-	color: white;
 	background: url('../img/letmelivedeepwhileilive.jpg') no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -12,16 +11,30 @@ body{
 	background-size: cover;
 }
 
+a, a:visited, body, h1, #centerTitle, .nav, .nav:active, .nav:hover, .nav:visited, .sidebar {
+	color:white;
+}
+
+button {
+	color: black;
+}
+
+button, #leftInline, .newPostLabel, .threadList {
+	text-align: left;
+}
+
 form {
 	margin: 15px;
 }
 
 h1 {
-	background-color: black;
-	color: white;
 	font-size: 22px;
 	margin: 0px;
 	padding: 5px;
+}
+
+h1, h5, #tableHead, .nav:active, .nav:hover {
+	background-color: black;
 }
 
 h1, h4, .nav {
@@ -33,23 +46,9 @@ h1, h4, #centerTitle, #footer, #irc, #nav {
 }
 
 h5 {
-	background-color: black;
 	padding: 10px;
 	margin: 10px;
-	margin-bottom: 0;
-}
-
-.newPostArea {
-	padding-left: 5%;
-	padding-right: 5%;
-}
-
-#submit {
-	margin-left: 5%;
-}
-
-button, #leftInline, .newPostLabel, .threadList {
-	text-align: left;
+	margin-bottom: 0px;
 }
 
 p {
@@ -61,19 +60,17 @@ strong {
 	font-size: 12px;
 }
 
-.featuredThreads {
-	background: gray;
-}
-
 table {
 	width: 98%;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 10px;
 }
 
-.emailStyle {
-	text-decoration: underline;
+table, #footer, #head, #main, #nav, #irc, #replyButton, #replyComment, .post {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+table, #listShowArea, #replyButton, #replyComment, #threadMain, .post {
+	margin-bottom: 10px;
 }
 
 td {
@@ -82,46 +79,88 @@ td {
 	padding-bottom: 10px;
 }
 
-#tableHead {
-	background-color: black;
+ul {
+	list-style-type: none;
+	padding-left: 15px;
 }
 
-.featuredThreads:nth-child(odd) {
-	background: lightgray;
+#center {
+	margin-top: 0px;
+	position: relative;
+	width: 764px;
 }
 
-#listShowArea {
-	margin-bottom: 10px;
+#center, #head, #left, #nav, #right {
+	margin-bottom: 5px;
 }
 
-#replyComment {
-	width: 100%;
-	margin-bottom: 10px;
-	margin-left: auto;
-	margin-right: auto;
+#center, #head, #left, #nav, #right, #titleleft, #titleright {
+	background-color: #292929;
 }
 
-button {
-	color:black;
+#center, #left, #right {
+	float: left;
 }
 
-.post {
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 10px;
+#center, #left {
+	margin-right: 6px;
+}
+
+#center, #right, .nav, .nav:visited {
+	display: inline-block;
+}
+
+#centerTitle {
+	margin: auto;
+	width: 50%;
+}
+
+#footer, #head, #main, #nav, #irc {
+	width: 1214px;
+}
+
+#footer, #irc {
+	clear: both;
+}
+
+#gamersDesc {
+	padding: 7px;
+}
+
+#head {
+	background-image: url('http://gamer.ischool.uw.edu/wp-content/cache/image/static/153e54cba6f6c145fa30e635b04992f8.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 135px;
+}
+
+#left, #right {
+	position: relative;
+	width: 219px;
+	z-index: 0;
 }
 
 #replyButton {
-	margin: 0;
-	margin-bottom: 10px;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0px;
 	width: 500px;
 }
 
-.timeStamp {
-	float: right;
+#replyComment, .post {
+	width: 100%;
+}
+
+#rightInline {
+	text-align: right;
+}
+
+#stuff {
+	position: absolute;
+	width: 100%;
+	top: 0px;
+}
+
+#submit {
+	margin-left: 5%;
 }
 
 #threadCenter {
@@ -131,9 +170,49 @@ button {
 }
 
 #threadMain {
-	margin-bottom: 10px;
 	margin-top: 10px;
 	width: 99%;
+}
+
+#titleleft, #titleright {
+	display: none;
+}
+
+.emailStyle, .sidebar:hover {
+	text-decoration: underline;
+}
+
+.featuredThreads {
+	background: gray;
+}
+
+.featuredThreads:nth-child(odd) {
+	background: lightgray;
+}
+
+.nav, .nav:active, .nav:hover, .nav:visited, .sidebar {
+	text-decoration: none;
+}
+
+.nav, .nav:visited {
+	font-size: 20px;
+	padding-bottom: 2px;
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-top: 2px;
+	text-transform: uppercase;
+}
+
+.newPostArea {
+	padding-left: 5%;
+	padding-right: 5%;
+}
+
+.threadContent {
+	background-color: #d8dce0;
+	font-size: 14px;
+	min-height: 100px;
+	padding: 5px;
 }
 
 .threadUser {
@@ -147,122 +226,8 @@ button {
 	padding-right: 5px;
 }
 
-.threadContent {
-	background-color: #d8dce0;
-	font-size: 14px;
-	min-height: 100px;
-	padding: 5px;
-}
-
-ul {
-	list-style-type: none;
-	padding-left: 15px;
-}
-
-a, a:visited {
-	color:white;
-}
-
-.nav, .nav:visited {
-	color: white;
-	display: inline-block;
-	font-size: 20px;
-	padding-bottom: 2px;
-	padding-left: 15px;
-	padding-right: 15px;
-	padding-top: 2px;
-	text-decoration: none;
-	text-transform: uppercase;
-}
-
-.nav:active, .nav:hover {
-	background-color: black;
-	color: white;
-	text-decoration: none;
-}
-
-#gamersDesc {
-	padding: 7px;
-}
-
-.sidebar {
-	color: white;
-	text-decoration: none;
-}
-
-.sidebar:hover {
-	text-decoration: underline;
-}
-
-#center {
-	display: inline-block;
-	margin-top: 0px;
-	position: relative;
-	width: 764px;
-}
-
-#center, #head, #left, #nav, #right, #titleleft, #titleright {
-	background-color: #292929;
-}
-
-#center, #left {
-	float: left;
-	margin-bottom: 5px;
-	margin-right: 6px;
-}
-
-#footer, #irc {
-	clear: both;
-}
-
-#head {
-	background-image: url('http://gamer.ischool.uw.edu/wp-content/cache/image/static/153e54cba6f6c145fa30e635b04992f8.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 135px;
-	margin-bottom: 5px;
-}
-
-#footer, #head, #main, #nav, #irc{
-	margin-left: auto;
-	margin-right: auto;
-	width: 1214px;
-}
-
-#left, #right {
-	position: relative;
-	width: 219px;
-	z-index: 0;
-}
-
-#nav {
-	margin-bottom: 5px;
-}
-
-#right {
-	display: inline-block;
-	float: left;
-	margin-bottom: 5px;
-}
-
-#stuff {
-	position: absolute;
-	width: 100%;
-	top: 0px;
-}
-
-#titleleft, #titleright {
-	display: none;
-}
-
-#rightInline {
-	text-align: right;
-}
-
-#centerTitle {
-	color: white;
-	margin: auto;
-	width:50%;
+.timeStamp {
+	float: right;
 }
 
 /* CSS that changes when the screen is smaller than 1230px */
@@ -282,19 +247,11 @@ a, a:visited {
 	#left, #right {
 		width: 170px;
 	}
-
-	h5 {
-		background-color: black;
-		padding: 10px;
-		margin: 10px;
-		margin-bottom: 0;
-	}
 }
 
 /* CSS that changes when the screen is smaller than 1024px */
 @media screen and (max-width: 1024px) {
 	h1{
-		font-size: 24px;
 		padding: 5px;
 	}
 
