--- a/css/main.css
+++ b/css/main.css
@@ -145,7 +145,7 @@ ul {
 	width: 500px;
 }
 
-#replyComment, .post {
+#replyComment, #stuff, .post {
 	width: 100%;
 }
 
@@ -155,7 +155,6 @@ ul {
 
 #stuff {
 	position: absolute;
-	width: 100%;
 	top: 0px;
 }
 
