firebase addition for threads

--- a/templates/forum/featuredTopic.html
+++ b/templates/forum/featuredTopic.html
@@ -1,6 +1,6 @@
 <div id="homepageStuff">
 	<div class="container" id="centerTitle">
-		<h4>Welcome to GAMERS!</h4>
+		<h4>Welcome to GAMER Group!</h4>
 		<h4>Below is our Featured Forum</h4>
 	</div>
 	<div id="listShowArea">
