--- a/templates/forum/general.html
+++ b/templates/forum/general.html
@@ -1,4 +1,9 @@
 <h4>GAMERS General Forum</h4>
+<div class="form-group">
+  <div class="col-sm-offset-2 col-sm-10 center-block" >
+    <button type="submit" class="btn btn-default">Create a New Thread</button>
+  </div>
+</div>
 
 <div id="listShowArea">
 		<table>
