--- a/templates/forum/blogs.html
+++ b/templates/forum/blogs.html
@@ -1,5 +1,9 @@
 <h4>GAMERS Blog Page</h4>
-
+<div class="form-group">
+  <div class="col-sm-offset-2 col-sm-10 center-block" >
+     <a ui-sref="threads" class="nav"><button type="submit" class="btn btn-default">Create a New Thread</button></a>
+  </div>
+</div>
 <div id="listShowArea">
 	<table>
 		<tr id="tableHead">
