--- a/templates/forum/blogs.html
+++ b/templates/forum/blogs.html
@@ -4,7 +4,7 @@
      <a ui-sref="threads" class="nav"><button type="submit" class="btn btn-default">Create a New Thread</button></a>
   </div>
 </div>
-<div id="listShowArea">
+<!-- <div id="listShowArea">
 	<table>
 		<tr id="tableHead">
 			<td>Blogs</td>
@@ -20,3 +20,36 @@
 		</tr>
 	</table>
 </div>
+
+// -->
+
+<div id="listShowArea">
+		<table>
+			<tr id="tableHead">
+				<td>Blogs: Featured</td>
+				<td>Original Creator</td>
+				<td>Replies</td>
+				<td>Date Created</td>
+			</tr>
+			<tr ng-repeat="thread4 in threads4" class="featuredThreads">
+				<td><a href="/#/thread/{{ thread4.id }}" class="emailStyle">{{ thread4.title }}</a></td>
+				<td>{{ thread4.author }}</td>
+				<td>{{ thread4.posts }}</td>
+				<td>{{ thread4.createdAt | date : 'short' }}</td>
+			</tr>
+		</table>
+		<table>
+			<tr id="tableHead">
+				<td>General Threads: Community</td>
+				<td>Original Creator</td>
+				<td>Replies</td>
+				<td>Date Created</td>
+			</tr>
+			<tr ng-repeat="thread3 in threads3" class="featuredThreads">
+				<td><a href="/#/thread/{{ thread3.id }}" class="emailStyle">{{ thread3.title }}</a></td>
+				<td>{{ thread3.author }}</td>
+				<td>{{ thread3.posts }}</td>
+				<td>{{ thread3.createdAt | date : 'short' }}</td>
+			</tr>
+		</table>
+	</div>
