new thread changes

--- a/templates/forum/newThread.html
+++ b/templates/forum/newThread.html
@@ -1,7 +1,7 @@
 <form class="form-horizontal" ng-submit="submit()" ng-show='!showLogin'>
   <div class="form-group newPostArea">
     <label for="forumSelect">Select Forum: </label>
-    <select>
+    <select class="forumselect">
       <option value="gamergroupgeneral">General</option>
       <option value="gamergroupblog">Blog</option>
       <option value="gamergroupfeaturedtopic">Featured Topic</option>
