--- a/templates/forum/general.html
+++ b/templates/forum/general.html
@@ -1,10 +1,12 @@
 <h4>GAMERS General Forum</h4>
-<div class="form-group">
-  <div class="col-sm-offset-2 col-sm-10 center-block" >
-    <button type="submit" class="btn btn-default">Create a New Thread</button>
-  </div>
-</div>
 
+<div class="form-group">
+	<div class="form-group">
+		  <div class="text-center" ng-show='!showLogin' >
+		    <a ui-sref="newThread" class="nav"><label type="button" class="btn btn-default">Create a New Thread</label></a>
+		  </div>
+	</div>
+</div>
 <div id="listShowArea">
 		<table>
 			<tr id="tableHead">
