--- a/templates/forum/home.html
+++ b/templates/forum/home.html
@@ -1,3 +1,9 @@
+
+<!-- <div>
+	<a onload="getElementById('homepageStuff').style.display = 'initial'" ui-sref="newPost" onclick="getElementById('homepageStuff').style.display = 'none'"><button type="submit" class="btn btn-default" ng-show="!showLogin">Make New Post</button></a>
+</div> -->
+
+
 <div id="homepageStuff">
 	<div class="container" id="centerTitle">
 		<h4>Featured Topic</h4>
