--- a/templates/forum/threads.html
+++ b/templates/forum/threads.html
@@ -1,13 +1,13 @@
 <div class="container" id="threadMain">
 	<div class="post">
 		<div class="threadTitle">
-			<h3>title placeholder</h3>
+			<h3>placeholder title</h3>
 		</div>
 		<div class="post">
 			<div class="threadUser"></div>
 		</div>
 		<div class="threadContent">
-			<p>placeholder</p>
+			<p>message</p>
 		</div>
 	</div>
 <div class="container" ng-init="getPosts()" id="threadMain">
