--- a/templates/forum/threads.html
+++ b/templates/forum/threads.html
@@ -1,13 +1,15 @@
 <div class="container" id="threadMain">
 	<div class="post">
 		<div class="threadTitle">
-			<h3>placeholder title</h3>
+			<h3>{{ first.title }}</h3>
 		</div>
 		<div class="post">
-			<div class="threadUser"></div>
-		</div>
-		<div class="threadContent">
-			<p>message</p>
+			<div class="threadUser">
+				<span>{{ first.author }}</span><span class="timeStamp">{{ first.recent }}</span>
+			</div>
+			<div class="threadContent">
+				<p>{{ first.message }}</p>
+			</div>
 		</div>
 	</div>
 <div class="container" ng-init="getPosts()" id="threadMain">
