Implemented Firebase for calling list of threads in blogs/general

--- a/templates/forum/general.html
+++ b/templates/forum/general.html
@@ -13,13 +13,13 @@
 				<td>General Threads: Featured</td>
 				<td>Original Creator</td>
 				<td>Replies</td>
-				<td>Date Created</td>
+				<td>Last Updated</td>
 			</tr>
-			<tr ng-repeat="thread1 in threads1" class="featuredThreads">
-				<td><a href="/#/thread/{{ thread1.id }}" class="emailStyle">{{ thread1.title }}</a></td>
-				<td>{{ thread1.author }}</td>
-				<td>{{ thread1.posts }}</td>
-				<td>{{ thread1.createdAt | date : 'short'  }}</td>
+			<tr ng-repeat="general in generals | filter:featured" class="featuredThreads">
+				<td><a href="/#/thread/{{ general.$id }}" class="emailStyle">{{ general.title }}</a></td>
+				<td>{{ general.author }}</td>
+				<td></td>
+				<td>{{ general.recent | date : 'short'  }}</td>
 			</tr>
 		</table>
 		<table>
@@ -27,13 +27,13 @@
 				<td>General Threads: Community</td>
 				<td>Original Creator</td>
 				<td>Replies</td>
-				<td>Date Created</td>
+				<td>Last Updated</td>
 			</tr>
-			<tr ng-repeat="thread2 in threads2" class="featuredThreads">
-				<td><a href="/#/thread/{{ thread2.id }}" class="emailStyle">{{ thread2.title }}</a></td>
-				<td>{{ thread2.author }}</td>
-				<td>{{ thread2.posts }}</td>
-				<td>{{ thread2.createdAt | date : 'short'  }}</td>
+			<tr ng-repeat="general in generals | filter:!featured" class="featuredThreads">
+				<td><a href="/#/thread/{{ general.$id }}" class="emailStyle">{{ general.title }}</a></td>
+				<td>{{ general.author }}</td>
+				<td></td>
+				<td>{{ general.recent | date : 'short'  }}</td>
 			</tr>
 		</table>
 	</div>
