--- a/templates/forum/blogs.html
+++ b/templates/forum/blogs.html
@@ -15,7 +15,7 @@
 			<td>Replies</td>
 			<td>Last Updated</td>
 		</tr>
-		<tr ng-repeat="blog in blogs | filtered:featured" class="featuredThreads">
+		<tr ng-repeat="blog in blogs | filter:featured" class="featuredThreads">
 			<td><a href="/#/thread/{{ blog.$id }}" class="emailStyle">{{ blog.title }}</a></td>
 			<td>{{ blog.author }}</td>
 			<td></td>
@@ -29,7 +29,7 @@
 			<td>Replies</td>
 			<td>Date Created</td>
 		</tr>
-		<tr ng-repeat="blogblog in blogs | filtered:!featured" class="featuredThreads">
+		<tr ng-repeat="blog in blogs | filter:!featured" class="featuredThreads">
 			<td><a href="/#/thread/{{ blog.$id }}" class="emailStyle">{{ blog.title }}</a></td>
 			<td>{{ blog.author }}</td>
 			<td></td>
