--- a/templates/forum/featuredTopic.html
+++ b/templates/forum/featuredTopic.html
@@ -15,11 +15,11 @@
 				<td>Replies</td>
 				<td>Date Created</td>
 			</tr>
-			<tr ng-repeat="thread2 in threads2" class="featuredThreads">
-				<td><a href="/#/thread/{{ thread2.id }}" class="emailStyle">{{ thread2.title }}</a></td>
-				<td>{{ thread2.author }}</td>
-				<td>{{ thread2.posts }}</td>
-				<td>{{ thread2.createdAt | date : 'short' }}</td>
+			<tr ng-repeat="feature in featured | filter:featured" class="featuredThreads">
+				<td><a href="/#/thread/{{ feature.$id }}" class="emailStyle">{{ feature.title }}</a></td>
+				<td>{{ feature.author }}</td>
+				<td></td>
+				<td>{{ feature.recent | date : 'short' }}</td>
 			</tr>
 		</table>
 	</div>
