--- a/templates/forum/blogs.html
+++ b/templates/forum/blogs.html
@@ -18,7 +18,7 @@
 		<tr ng-repeat="blog in blogs | filter:featured" class="featuredThreads">
 			<td><a href="/#/thread/{{ blog.$id }}" class="emailStyle">{{ blog.title }}</a></td>
 			<td>{{ blog.author }}</td>
-			<td></td>
+			<td>{{ blog.replies }}</td>
 			<td>{{ blog.recent | date : 'short' }}</td>
 		</tr>
 	</table>
@@ -32,7 +32,7 @@
 		<tr ng-repeat="blog in blogs | filter:!featured" class="featuredThreads">
 			<td><a href="/#/thread/{{ blog.$id }}" class="emailStyle">{{ blog.title }}</a></td>
 			<td>{{ blog.author }}</td>
-			<td></td>
+			<td>{{ blog.replies }}</td>
 			<td>{{ blog.recent | date : 'short' }}</td>
 		</tr>
 	</table>
