--- a/templates/forum/blogs.html
+++ b/templates/forum/blogs.html
@@ -15,7 +15,7 @@
 			<td>Replies</td>
 			<td>Last Updated</td>
 		</tr>
-		<tr ng-repeat="blog in blogs | filter:featured | orderBy:'-recent'" class="featuredThreads">
+		<tr ng-repeat="blog in blogs | orderBy:'-recent'" ng-if="blog.featured" class="featuredThreads">
 			<td><a href="/#/thread/{{ blog.$id }}" class="emailStyle">{{ blog.title }}</a></td>
 			<td>{{ blog.author }}</td>
 			<td>{{ blog.replies }}</td>
