--- a/templates/forum/general.html
+++ b/templates/forum/general.html
@@ -15,7 +15,7 @@
 				<td>Replies</td>
 				<td>Last Updated</td>
 			</tr>
-			<tr ng-repeat="general in generals | filter:featured | orderBy:'-recent'" class="featuredThreads">
+			<tr ng-repeat="general in generals | orderBy:'-recent'" ng-if="general.featured" class="featuredThreads">
 				<td class='threadTable'><a href="/#/thread/{{ general.$id }}" class="emailStyle">{{ general.title }}</a></td>
 				<td>{{ general.author }}</td>
 				<td>{{ general.replies }}</td>
@@ -24,13 +24,13 @@
 		</table>
 		<table>
 			<tr id="tableHead">
-				<td class='threadTable'>General Threads: Community</td>
+				<td>General Threads: Community</td>
 				<td>Original Creator</td>
 				<td>Replies</td>
 				<td>Last Updated</td>
 			</tr>
 			<tr ng-repeat="general in generals | filter:!featured | orderBy:'-recent'" class="featuredThreads">
-				<td><a href="/#/thread/{{ general.$id }}" class="emailStyle">{{ general.title }}</a></td>
+				<td class='threadTable'><a href="/#/thread/{{ general.$id }}" class="emailStyle">{{ general.title }}</a></td>
 				<td>{{ general.author }}</td>
 				<td>{{ general.replies }}</td>
 				<td>{{ general.recent | date : 'short'  }}</td>
