--- a/templates/forum/featuredTopic.html
+++ b/templates/forum/featuredTopic.html
@@ -16,7 +16,7 @@
 				<td>Date Created</td>
 			</tr>
 			<tr ng-repeat="feature in featured  | orderBy:'-recent'" class="featuredThreads">
-				<td><a href="/#/thread/{{ feature.$id }}" class="emailStyle">{{ feature.title }}</a></td>
+				<td><a href="ishiiy/GAMERS/#/thread/{{ feature.$id }}" class="emailStyle">{{ feature.title }}</a></td>
 				<td>{{ feature.author }}</td>
 				<td>{{ feature.replies }}</td>
 				<td>{{ feature.recent | date : 'short' }}</td>
