--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -11,7 +11,7 @@
 		</tr>
 		<tr ng-repeat="thread in forum | orderBy:'-recent'" ng-if="thread.featured" class="featuredThreads">
 			<td>star</td>
-			<td><a href="/#/thread/{{ thread.$id }}" class="emailStyle">{{ thread.title }}</a></td>
+			<td><a href="#/thread/{{ thread.$id }}" class="emailStyle">{{ thread.title }}</a></td>
 			<td>{{ thread.author }}</td>
 			<td>{{ thread.replies }}</td>
 			<td>{{ thread.recent | date : 'short' }}</td>
@@ -27,7 +27,7 @@
 		</tr>
 		<tr ng-repeat="thread in forum | orderBy:'-recent'" ng-if="!thread.featured" class="featuredThreads">
 			<td>star</td>
-			<td><a href="/#/thread/{{ thread.$id }}" class="emailStyle">{{ thread.title }}</a></td>
+			<td><a href="#/thread/{{ thread.$id }}" class="emailStyle">{{ thread.title }}</a></td>
 			<td>{{ thread.author }}</td>
 			<td>{{ thread.replies }}</td>
 			<td>{{ thread.recent | date : 'short' }}</td>
